# Trial

./: README.md  meson.build
data/: hello-again.appdata.xml  hello-again.desktop  hello-again.desktop~  meson.build
hello-again/src/: Application
po/: meson.build
src/: Application.vala
